<package format="2">
  <name>rtmaps_ros_bridge</name>
  <version>1.22.0</version>
  <description>
    ROS subscribers and publishers for RTMaps, including the ROS Clock component for the RTMaps clock synchronization.
  </description>
  <maintainer email="support@intempora.com">Intempora</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs sensor_msgs geometry_msgs nav_msgs rmp_msgs</depend>
  <build_depend>roscpp</build_depend>
</package>
