<package format="2">
  <name>rtmaps_ros_custom_data_types</name>
  <version>1.1.0</version>
  <description>
    ROS subscribers and publishers for user-defined data types.
  </description>
  <maintainer email="support@intempora.com">Intempora</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs my_data_types</depend>
  <build_depend>roscpp my_data_types</build_depend>
</package>
